--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /db/CaspioData_2015-Sep-10_1600
+/db/sqlite-dumpfile201510271301.sql
 
 # Ignore all logfiles and tempfiles.
 /log/*
