--- a/config/database.yml
+++ b/config/database.yml
@@ -11,3 +11,10 @@ test:
   database: db/test
   pool: 5
   timeout: 5000
+
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: db/development
+  pool: 5
+  timeout: 5000
