--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,6 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: db/development
+  database: db/production
   pool: 5
   timeout: 5000
