--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /db/*.sqlite3-journal
 /db/CaspioData_2015-Sep-10_1600
 /db/sqlite-dumpfile201510271301.sql
+/db/*.dump
 
 # Ignore all logfiles and tempfiles.
 /log/*
