--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@
 /db/*.sqlite3-journal
 /db/CaspioData_2015-Sep-10_1600
 /db/sqlite-dumpfile201510271301.sql
-/db/*.dump
+/db/dumps
+/db/dumps/*.dump
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -21,3 +22,4 @@
 
 # Ignore pass
 /.pass
+/shell/.ftppass
