--- a/test/fixtures/record7s.yml
+++ b/test/fixtures/record7s.yml
@@ -1,15 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  jobtitle: MyString
   department: MyString
-  fy16wages: 1
-  fy17annualrate: 1
+  name: MyString
+  gender: MyString
+  position: MyString
+  salary: 1
+  travel: 1
 
 two:
-  name: MyString
-  jobtitle: MyString
   department: MyString
-  fy16wages: 1
-  fy17annualrate: 1
+  name: MyString
+  gender: MyString
+  position: MyString
+  salary: 1
+  travel: 1
